fix review search overflow

--- a/components/CollectionCard/CollectionCard.module.scss
+++ b/components/CollectionCard/CollectionCard.module.scss
@@ -28,6 +28,7 @@
   }
 
   .skeleton {
+    display: block;
     height: 350px;
     width: 270px;
   }
